--- a/p5.css
+++ b/p5.css
@@ -1,9 +1,10 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     background-color: #202020;
     color: #ffffff;
     width: 100%;
     height: 100vh;
+    user-select: none;
 }
 
 h1 {
@@ -11,44 +12,153 @@ h1 {
     text-align: center;
 }
 
-p{
+p {
     text-align: center;
 }
 
-fieldset{
+fieldset {
     margin-bottom: 2rem;
+    border-radius: 10px;
 }
 
-form{
+form {
     max-width: 500px;
     margin: 0 auto;
 }
 
-input{
+input {
     width: 100%;
     min-height: 1.5em;
     outline: none;
-    background-color: #202020;
-    border:0
+    background-color: rgb(77, 77, 77);
+    border: 0
 }
-input[type="text"]{
+
+input[type="text"] {
     width: calc(100% - 10px);
     margin: 0.5em 0;
     padding: 5px;
+    border-radius: 10px;
 }
 
-input[type="text"]:focus{
+input::placeholder {
+    color: rgb(13, 209, 235);
+}
+
+input:focus::placeholder {
+    color: white;
+}
+
+input[type="text"]:focus {
     margin: 0.5em 0;
+    color: green;
+    background-color: black;
 }
 
-input[type="email"]{
+input[type="email"] {
+    width: calc(100% - 10px);
     margin: 0.5em 0;
+    padding: 5px;
+    border-radius: 10px;
 }
 
-input[type="number"]{
-    margin: 0.5em 0 0 0;
+input[type="email"]:focus {
+    margin: 0.5em 0;
+    color: green;
+    background-color: black;
 }
 
-label{
+input[type="number"] {
+    margin: 0.5em 0 0.5em 0;
+    width: calc(100% - 10px);
+    padding: 5px;
+    border-radius: 10px;
+}
+
+input[type="number"]:focus {
+    margin: 0.5em 0;
+    color: green;
+    background-color: black;
+}
+
+label,
+select,
+textarea {
     width: 100%;
+    display: block;
+}
+
+select {
+    margin-top: 0.5em;
+    min-height: 2em;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    color: rgb(13, 209, 235);
+    background-color: rgb(77, 77, 77);
+}
+
+select:focus {
+    color: green;
+    background-color: black;
+}
+
+input[type="radio"] {
+    width: unset;
+    vertical-align: middle;
+    margin-top: 1px;
+}
+
+input[type="checkbox"] {
+    width: unset;
+    vertical-align: middle;
+    margin-top: 1px;
+}
+
+textarea {
+    margin-top: 1em;
+    border: none;
+    outline: none;
+    background-color: rgb(77, 77, 77);
+    border-radius: 10px;
+    padding-left: 0.5em;
+}
+
+textarea:focus {
+    background-color: black;
+    color: green;
+}
+
+
+textarea::placeholder {
+    color: rgb(13, 209, 235);
+}
+
+textarea:focus::placeholder {
+    color: whitesmoke;
+}
+
+.cp {
+    cursor: pointer;
+}
+
+#label-desc-choose-lang{
+    margin-bottom: 0.5em;
+}
+
+input[type="submit"]{
+    margin-bottom: 3em;
+    padding: 0.5em;
+    color: aqua;
+    border-radius: 10px;
+    width: 50%;
+    margin-left: 50%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+input[type="submit"]:active{
+    border: 1px solid white;
+    background-color: green;
+    color: black;
+ 
 }
