--- a/p14.css
+++ b/p14.css
@@ -82,6 +82,58 @@ main{
     width: calc(100% - 20%);
     left: 20%;
     overflow: auto;
+    padding:10px;
+}
+
+main section{
+    background-color: rgb(179, 187, 184);
+    padding: 10px;
+}
+
+main section ul{
+    list-style: none;
+}
+
+main section ul li p {
+    padding: 6px;
+    margin: 5px 0;
+    background-color: rgb(219, 210, 210);
+}
+
+main section ul li:not(:has(h2)) {
+    padding: 3px;
+    background-color: rgb(187, 183, 183);
+}
+
+main section p{
+    padding: 10px;
+}
+
+main section code{
+    border-radius: 10px;
+    display: block;
+    padding: 10px;
+    background-color: rgb(19, 17, 17);
+    color: white;
+    margin-top: 10px;
+}
+
+code .html-tag{
+    color: rgb(118, 118, 199);
+}
+
+li .html-tag, p .html-tag{
+    color:blue !important;
+}
+
+main section header{
+    background-color: rgb(135, 135, 182);
+    border-radius: 2px;
+    margin-bottom: 10px;
+}
+
+main section header h1{
+    padding: 10px;
 }
 
 @media (max-width:768px){
